--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-hot-loader": "^4.8.4",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
     "taffydb": "^2.7.3"
